crates/vexor-compiler/tests/golden/error/output/no_export.err
parse error at line 3, column 14
  |
3 | // no export
  |              ^
expected at least one export